--- a/ATuaVoz/index.html
+++ b/ATuaVoz/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="../base/static/logo.png" />
     <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A Tua Voz</title>
+    <title>Lista A AAUAv - 2025</title>
   </head>
   <body>
     <div id="root"></div>
