--- a/ATuaVoz/index.html
+++ b/ATuaVoz/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="../base/static/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="../ATuaVoz/src/assets/logos/asset13.png" />
     <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista A AAUAv - 2025</title>
